Have satellites report platform and OS variant
And expose them via the REST API for linstor client and
linstor GUI.

Platform is an enum and either LINUX or WINDOWS.

For the OS variant, the following is used:

Windows: Just ask Java's properties which give something like
Windows Server 2019.

Linux: Parse /etc/os-release for PRETTY_NAME. This gives something
like Fedora Linux 42 (Workstation Edition)

This was coded with assistance from Claude Opus 4.5.
